--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 								<h3 class="fh5co-section-heading">受賞歴</h3>
 							</div>
 							<div class="col-md-9">								
-								<p class="fh5co-lead">・U22プログラミングコンテストBestBest40
+								<p class="fh5co-lead">・U22プログラミングコンテスト Best40
 								</p>
 
 								<p class="fh5co-lead">・未踏Jr.2021 スーパークリエータ　開発：<a href="https://jr.mitou.org/projects/2021/augment">Augment</a>
